# fatsecret

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: ci.yml
Examples/: web_example.py
docs/: conf.py
examples/: cli_example.py  web_example.py
fatsecret/: fatsecret.py
src/fatsecret/: __init__.py  auth.py  core.py  exercises.py  fatsecret.py  foods.py  meals.py  profile.py  recipes.py  weight.py
tests/integration/: conftest.py  test_foods_integration.py  test_valid_response.py
tests/unit/: test_auth.py  test_core_utils.py
